# docxpand

./: DATASET_LICENSE  DISCLAIMER  Dockerfile  LICENCE  LICENSE  README.md  pyproject.toml
docxpand/: canvas.py  conditionals.py  dataset.py  generator.py  geometry.py  image.py  instantiable.py  metrics.py  normalizer.py  scene_insertion.py  specimen.py  svg_to_image.py  template.py  tesseract.py  utils.py
docxpand/providers/: __init__.py
docxpand/providers/barcode/: __init__.py
docxpand/providers/date_time/: __init__.py
docxpand/providers/mrz/: __init__.py
docxpand/providers/photo/: __init__.py
docxpand/providers/residence_permit/: __init__.py
docxpand/providers/signature/: __init__.py
docxpand/specimens/: SOURCES.md
docxpand/specimens/photos/: SOURCES.md
docxpand/templates/: showcase.css  showcase.html  showcase.js
docxpand/templates/id_card_td1_a/: generator.json
docxpand/templates/id_card_td1_b/: generator.json
docxpand/templates/id_card_td2_a/: generator.json
docxpand/translations/: labels.py  residence_permit.py
scripts/dataset/: delete_other_side_fields.py  extract_field_locations_from_svgs.py  extract_image_fields_from_svgs.py  generate_fake_structured_documents.py  insert_generated_documents_in_scenes.py  reinsert_generated_documents_in_scenes.py  transform_field_locations_to_inserted_documents.py
scripts/field_recognition_baseline/: evaluate.py  predict.py
scripts/localization_baseline/: plot.py
scripts/lpips/: lpips_dirs.py  lpips_metrics.py
stable_diffusion/: Dockerfile  README.md
(+18 files in other folders)
